<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/textClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/circlebackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Info"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="74dp"
                android:layout_height="88dp"
                android:paddingTop="15dp"
                android:src="@mipmap/microphone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:textSize="20dp"
                android:text="@string/AmplifyInstructions"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="74dp"
                android:layout_height="88dp"
                android:paddingTop="20dp"
                android:src="@mipmap/lighton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:textSize="20dp"
                android:text="@string/LightInfo"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="74dp"
                android:layout_height="88dp"
                android:paddingTop="20dp"
                android:src="@mipmap/headset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:textSize="20dp"
                android:text="@string/HeadsetInfo"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>