<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="edu.ucsc.cmps121.adiuvare.SpeakingScreen">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="6">

        <EditText
            android:id="@+id/TextInput"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            android:layout_weight="2"
            android:backgroundTint="@color/blueLight"
            android:gravity="bottom|start|end"
            android:hint="@string/Speaking_Prompt"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
            android:lines="3"
            android:textColor="@color/white"
            android:textColorHighlight="@color/blueLight"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@color/blueLight"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:gravity="top|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ClearText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ClearText"
                android:textSize="30sp" />

            <Button
                android:id="@+id/Speak"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Speak"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
